--- a/src/components/Navbar/_Navbar.scss
+++ b/src/components/Navbar/_Navbar.scss
@@ -1,76 +1,92 @@
 .navbarOuterContainer {
   align-items: center;
+  position: fixed;
+  background-color: black;
+  box-shadow: 0rem 0.1rem 0.25rem 0rem rgb(100, 100, 100);
+  color: white;
   display: flex;
   width: 100%;
-
-  img {
-    height: 4.5rem;
-    padding: 0.5rem;
-  }
-}
-
-.navbarInnerContainer {
-  display: flex;
-  flex-direction: column;
-  height: 5.75rem;
-  width: 100%;
-  list-style: none;
+  height: 7rem;
   a {
     text-decoration: none;
   }
   a:visited {
     color: white;
   }
-  .upperNav {
+  .imageContainer {
     align-items: center;
     display: flex;
-    font-family: 'Poppins', sans-serif;
-    font-size: 1.25rem;
-    height: 100%;
-    justify-content: space-between;
-    width: 100%;
+    height: 5.65rem;
+  }
+  img {
+    height: 7rem;
+    width: 7rem;
+  }
+}
 
-    span {
-      margin: 0 0.1rem;
+.navbarInnerContainer {
+  display: flex;
+  flex-direction: column;
+  height: 7rem;
+  position: relative;
+  width: 100%;
+  list-style: none;
+  .upperNav {
+    align-items: center;
+    background: rgb(183, 28, 28);
+    background: linear-gradient(
+      135deg,
+      rgba(183, 28, 28, 1) 0%,
+      rgba(183, 28, 28, 1) 20%,
+      rgba(198, 40, 40, 1) 40%,
+      rgba(198, 40, 40, 1) 60%,
+      rgba(211, 47, 47, 1) 80%,
+      rgba(211, 47, 47, 1) 100%
+    );
+    display: flex;
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.2rem;
+    height: 3rem;
+    justify-content: flex-end;
+    width: 100%;
+    text-shadow: 1px 1px black;
+    #accountMenu {
+      a {
+        text-decoration: none;
+      }
+    }
+    .userName {
+      color: rgb(0, 113, 62);
+      margin: 0 0.15rem;
+      font-weight: 600;
     }
   }
   .lowerNav {
-    font-family: 'Marcellus', serif;
     align-items: center;
-    font-size: 1.75rem;
-
+    background-color: black;
     display: flex;
+    font-family: 'Marcellus', serif;
+    font-size: 1.5rem;
+    justify-content: flex-end;
     width: 100%;
-    justify-content: center;
-    background-color: rgb(0, 0, 0);
-    height: 2.8rem;
-    a {
+    height: 4rem;
+    .menuLinks {
       display: flex;
-      align-items: center;
+      justify-content: space-evenly;
       height: 100%;
+      width: 100%;
+      a {
+        align-items: center;
+        display: flex;
+        height: 100%;
+        padding: 0 2rem;
+      }
+      a:hover {
+        background-color: rgba(100, 100, 100, 0.2);
+      }
     }
-    a:hover {
-      background-color: rgba(100, 100, 100, 0.2);
+    .cart {
+      margin-right: 1rem;
     }
   }
-}
-
-.cart {
-  button {
-    height: 100%;
-  }
-}
-
-#test {
-  padding: 0;
-  background: rgb(183, 28, 28);
-  background: linear-gradient(
-    135deg,
-    rgba(183, 28, 28, 1) 0%,
-    rgba(183, 28, 28, 1) 20%,
-    rgba(198, 40, 40, 1) 40%,
-    rgba(198, 40, 40, 1) 60%,
-    rgba(211, 47, 47, 1) 80%,
-    rgba(211, 47, 47, 1) 100%
-  );
 }
