--- a/src/components/SignupForm/_SignupForm.scss
+++ b/src/components/SignupForm/_SignupForm.scss
@@ -1,25 +1,30 @@
-.signupContainer {
+.signupFormContainer {
+  width: 40rem;
+  margin-top: 5rem;
   h4 {
-    margin: 1rem;
+    text-align: center;
+    margin-bottom: 2rem;
+  }
+  .errorContainer {
     position: relative;
   }
   p {
     color: red;
     font-size: 1rem;
+    left: 38.5%;
+    margin: auto;
     position: absolute;
-    top: 14.25rem;
+    top: -2rem;
+  }
+  .loginLink {
+    display: flex;
+    justify-content: center;
   }
   a {
     text-decoration: none;
-    text-align: center;
   }
 
   a:visited {
     color: blue;
   }
-}
-
-.signupCard {
-  width: 60%;
-  margin: auto;
 }
