--- a/src/components/LoginForm/_LoginForm.scss
+++ b/src/components/LoginForm/_LoginForm.scss
@@ -1,17 +1,27 @@
-.loginContainer {
+.loginFormContainer {
+  width: 40rem;
+  margin-top: 5rem;
   h4 {
-    margin: 1rem;
+    text-align: center;
+    margin-bottom: 2rem;
+  }
+  .errorContainer {
     position: relative;
   }
   p {
     color: red;
     font-size: 1rem;
+    left: 38.5%;
+    margin: auto;
     position: absolute;
-    top: 14.25rem;
+    top: -2rem;
+  }
+  .signupLink {
+    display: flex;
+    justify-content: center;
   }
   a {
     text-decoration: none;
-    text-align: center;
   }
 
   a:visited {
