--- a/src/components/Navbar/_Navbar.scss
+++ b/src/components/Navbar/_Navbar.scss
@@ -48,6 +48,7 @@
     font-size: 1.2rem;
     height: 3rem;
     justify-content: flex-end;
+    padding-right: 1rem;
     width: 100%;
     text-shadow: 1px 1px black;
     #accountMenu {
