--- a/src/App.css
+++ b/src/App.css
@@ -77,6 +77,7 @@
 }
 
 .navbarOuterContainer a {
+  color: white;
   text-decoration: none;
 }
 
@@ -160,7 +161,7 @@
   height: 4rem;
 }
 
-.navbarInnerContainer .lowerNav .menuLinks {
+.navbarInnerContainer .lowerNav .pageLinks {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -171,7 +172,7 @@
   width: 100%;
 }
 
-.navbarInnerContainer .lowerNav .menuLinks a {
+.navbarInnerContainer .lowerNav .pageLinks a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -182,7 +183,7 @@
   padding: 0 2rem;
 }
 
-.navbarInnerContainer .lowerNav .menuLinks a:hover {
+.navbarInnerContainer .lowerNav .pageLinks a:hover {
   background-color: rgba(100, 100, 100, 0.2);
 }
 
